Add project-user assignment feature (#4)
